# terraform-aws-image-resize

./: .gitignore  .terraform.tfstate.lock.info  Makefile  README.md  build.toml  data.tf  distribution.tf  main.tf  origin.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  var.tf  variables.tf
code/image-resize/: .gitignore  env.json.example  samconfig.toml  template.yaml
code/image-resize/rust_app/: Cargo.toml
code/image-resize/rust_app/resize/: Cargo.toml
code/image-resize/rust_app/resize/src/: config.rs  lib.rs  utils.rs
code/image-resize/rust_app/src/: config.rs  main.rs  s3.rs  utils.rs
code/image-resize/src/: .eslintrc.json  index.mjs  package-lock.json  package.json
code/image-resize/src/utils/: config.mjs  constant.mjs  enum.mjs  resize.mjs  s3.mjs
code/image-resizing/: index.js  package-lock.json  package.json
code/lambda-nodejs18.x/: template.yaml
code/lambda-nodejs18.x/events/: event.json
code/lambda-nodejs18.x/resize-image/utils/: constant.mjs  resize.mjs
code/origin-response/: index.js  package-lock.json  package.json
code/viewer-request/: package.json  tsconfig.json
code/viewer-request/src/: constant.ts  index.ts
docs/: .$aws.drawio.bkp  aws.drawio
modules/image_distribution/: data.tf  main.tf  variables.tf
modules/image_distribution/code/viewer-request/tests/: index.test.ts
modules/image_origin/: data.tf  main.tf  outputs.tf  variables.tf
modules/image_origin/code/image-resizing/: constant.js  package-lock.json
src/image-resize/: samconfig.toml  template.yaml
src/image-resize/rust_app/src/: main.rs  utils.rs
(+1 files in other folders)
