[package]
name = "resize-image"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "resize"]

[dependencies]
resize = { path = "./resize" }

serde = { workspace = true }
url = { workspace = true }
lambda_runtime = { workspace = true }
lazy_static = { workspace = true }

async-trait = "0.1.81"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.46.0"
aws-smithy-http = "0.60.10"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
  "s3",
] }

mime = "0.3.17"
tokio = { version = "1", features = ["macros"] }
ureq = "2.10.1"
regex = "1.10.6"
serde_json = "1.0.128"
base64 = "0.22.1"

[workspace.dependencies]
lambda_runtime = "0.13.0"
serde = "1.0.210"
url = "2.5.2"
lazy_static = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
