[package]
name = "resize"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
lambda_runtime = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }

fast_image_resize = { version = "4.2.1", features = ["image"] }
image = "0.25.2"
libblur = "0.14.2"
imghdr = "0.7.0"